# AgentStack

b2b_researcher/: .env.example  Dockerfile  README.md  agentstack.json  fly.toml  pyproject.toml  requirements.txt  setup.py  test_report_generation.py
b2b_researcher/agent-api/: .env.example  Dockerfile  README.md  agentstack.json  pyproject.toml  pyrightconfig.json  requirements.txt  test_websocket.py
b2b_researcher/agent-api/agent_api/: __init__.py  data.py  main.py  models.py
b2b_researcher/output/: final_report.md  prompt_target_company_overview_20250304_112039.txt  prompt_target_macro_trends_20250304_112907.txt  prompt_target_news_section_20250304_112219.txt  prompt_target_open_positions_20250304_112131.txt  prompt_user_20250304_111502.txt
b2b_researcher/src/: graph.py  main.py  types.py
b2b_researcher/src/config/: agents.yaml  inputs.yaml  tasks.yaml
b2b_researcher/src/functions/: apply_verification.py  execute_rag_process.py  fetch_company_news_branch.py  fetch_job_listings_branch.py  fetch_macro_trends_branch.py  fetch_page_contents_branch.py  fetch_sitemap_urls_branch.py  finalize_state.py  fix_citation_sequence.py  format_job_listings.py  generate_adaptive_queries.py  generate_company_report_branch.py  generate_fallback_queries.py  generate_target_company_report.py  generate_user_company_report.py  get_cached_data.py  get_news_docs.py  get_table_name_for_branch.py  get_webpage_docs.py  initialize_state.py  make_json_serializable.py  merge_branch_states.py  run_news_branch.py  save_company_report_to_db.py  save_contents_to_db_branch.py  save_job_listings_to_db_branch.py  (+6 more)
(+18 files in other folders)
